fixed an issue where on certain screen sizes the change log button would overlap the report issue button

--- a/src/components/Lobby/LobbyManager/LobbyManager.css
+++ b/src/components/Lobby/LobbyManager/LobbyManager.css
@@ -76,5 +76,5 @@
 
 .lobbyChangeLogButton {
   margin-top: auto;
-  margin-bottom: 60px;
+  margin-bottom: 90px;
 }
